2006-04-30  Bruno Haible  <bruno@clisp.org>

	* javacomp.h (compile_java_class): Add source_version, target_version
	arguments.
	* javacomp.c: Rewritten to choose only a compiler that respects the
	specified source_version and target_version.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* xvasprintf.c: Include limits.h, string.h, xsize.h.
	(EOVERFLOW): Define fallback value.
	(xstrcat): New function.
	(xvasprintf): Recognize the special case of a string concatenation.

2006-03-13  Bruno Haible  <bruno@clisp.org>

	* javaversion.h: New file.
	* javaversion.c: New file.
	* javaversion.java: New file.
	* javaversion.class: New file, generated from javaversion.java.
	* Makefile.am (libgettextlib_la_SOURCES): Add javaversion.h,
	javaversion.c.
	(pkgdatadir, pkgdata_DATA): New variables.
	(EXTRA_DIST): Add javaversion.java.
	(DEFS): Also define PKGDATADIR.
	* Makefile.msvc (pkgdatadir, IIpkgdatadir): New variables.
	(CFLAGS): Also define PKGDATADIR.
	(OBJECTS): Add javaversion.obj.
	(javaversion.obj): New rule.
	* Makefile.vms (pkgdatadir): New variable.
	(CFLAGS): Also define PKGDATADIR.
	(OBJECTS): Add javaversion.obj.
	(javaversion.obj): New rule.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* xvasprintf.h: New file, from gnulib.
	* xvasprintf.c: New file, from gnulib.
	* xasprintf.c: New file, from gnulib.
	* xerror.h (xasprintf): Remove declaration.
	* xerror.c: Don't include stdarg.h, error.h, exit.h, vasprintf.h,
	gettext.h.
	(_): Remove macro.
	(xasprintf): Remove function.
	* Makefile.am (libgettextlib_la_SOURCES): Add xvasprintf.h,
	xvasprintf.c, xasprintf.c.
	* Makefile.msvc (OBJECTS): Add xvasprintf.obj, xasprintf.obj.
	(xvasprintf.obj, xasprintf.obj): New rules.
	* Makefile.vms (OBJECTS): Add xvasprintf.obj, xasprintf.obj.
	(xvasprintf.obj, xasprintf.obj): New rules.

2006-05-01  Bruno Haible  <bruno@clisp.org>

	* javacomp.sh.in: Update for changed javacomp.m4.

2006-04-23  Bruno Haible  <bruno@clisp.org>
