@@ -1,3 +1,7 @@
+2006-05-06  Charles Wilson  <cygwin@cwilson.fastmail.fm>
+
+	* progreloc.c (maybe_executable) [CYGWIN]: Use the access() function.
+
 2006-04-30  Bruno Haible  <bruno@clisp.org>
 
 	* javacomp.h (compile_java_class): Add source_version, target_version
